--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,12 @@
 .lang a {
-    color: #fff;
+    color: #000;
 }
 .dropdown-menu {
     background-color: #3490dc;
 }
 .body {
     height: 250px !important;
+}
+.al-ju p {
+    text-align: justify;
 }
