--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 .lang a {
     color: #000;
 }
@@ -7,6 +8,48 @@
 .body {
     height: 250px !important;
 }
-.al-ju p {
+.custom {
+    margin-bottom: 10px;
+}
+.al-ju p,
+.custom p {
     text-align: justify;
+}
+.post-img {
+    max-width: 180px;
+    height: 130px;
+    margin: 5px auto;
+}
+.post-title {
+    margin-bottom: 0;
+    text-align: center;
+    padding-top: 5px;
+    background-color: #dddddd4a;
+    border-radius: 40%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 20px;
+}
+.post-card {
+    background-color: #f1eaea78;
+}
+.show-img {
+    width: 60%;
+    height: 35%;
+}
+.post-show {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.post-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 25px;
+}
+.pager {
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
 }
