--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,7 +55,7 @@
 }
 .fixed-me {
     position: fixed !important;
-    margin: 0 25px;
+    margin: 10px 25px;
 }
 .search-img {
     border-radius: 50%;
@@ -94,4 +94,36 @@
 .copy,
 .my-info {
     width: 50%;
+}
+
+.soc-links {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 5px 7px;
+}
+.soc-links li {
+    padding: 5px 7px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    font-size: 20px;
+}
+.soc-links button {
+    border: none;
+}
+.soc-links button i {
+    color: #6656f9;
+}
+.soc-links button[disabled="disabled"] {
+    opacity: 0.4;
+}
+.soc-links button {
+    border: none;
+}
+.likes {
+    position: absolute;
+    bottom: 0px;
+    font-size: 11px;
+    right: 368px;
 }
