--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,8 @@
 .custom p {
     text-align: justify;
 }
-.post-img {
+.post-img,
+.profile-img {
     max-width: 180px;
     height: 130px;
     margin: 5px auto;
@@ -127,8 +128,18 @@
     font-size: 11px;
     right: 368px;
 }
-.msg-btn{
+.msg-btn {
     position: fixed;
     top: 50px;
     right: 50px;
+}
+
+.profile-img {
+    border-radius: 50%;
+}
+.back-btn {
+    position: absolute;
+    left: -550px;
+    top: 0px;
+    z-index: 999;
 }
